# django-tourism-app

./: .flake8  .pre-commit-config.yaml  Makefile  Procfile  README.md  db.json  manage.py  pyproject.toml  requirements.txt
adminapp/: forms.py  urls.py  views.py
adminapp/templates/adminapp/: accommodation_delete.html  accommodation_read.html  accommodation_update.html  accommodations.html  base.html  countries.html  country_delete.html  country_update.html  user_delete.html  user_update.html  users.html
adminapp/templates/adminapp/includes/: inc_menu.html
adminapp/templatetags/: tagz.py
authapp/: forms.py  models.py  views.py
authapp/migrations/: 0001_initial.py
authapp/templates/authapp/: edit.html  login.html  register.html
basketapp/: apps.py  models.py  urls.py  views.py
basketapp/migrations/: 0001_initial.py
basketapp/templates/basketapp/: base.html  basket.html
basketapp/templates/basketapp/includes/: inc_basket_list.html  inc_footer.html
mainapp/: models.py  urls.py  views.py
mainapp/management/commands/: update_db.py
mainapp/migrations/: 0001_initial.py
mainapp/templates/mainapp/: about.html  accommodation_details.html  accommodations.html  book.html  index.html
market_pj/: asgi.py  settings.py  urls.py  wsgi.py
ordersapp/: apps.py  forms.py  models.py  urls.py  views.py
ordersapp/migrations/: 0001_initial.py
ordersapp/templates/ordersapp/: order_confirm_delete.html  order_detail.html  order_form.html  order_list.html
static/css/: bootstrap.css  style 2.css
static/js/: basket_scripts.js
(+4 files in other folders)
