[tool.poetry]
name = "django-tourism-app"
version = "0.1.0"
description = ""
authors = ["alexanderlozovoy <berpress@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
psycopg2 = "^2.9.3"
Pillow = "^9.1.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
